<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <Button
        android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:onClick="resetScore"
            android:text="Reset"
            android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/team_a_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:hint="Enter First Team Name"
                android:onClick="setTeamAName"
                android:textSize="10sp"
                android:text="@string/team_a_name_text"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="Points"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="Fouls"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/team_a_score"
                    android:layout_marginBottom="16dp"
                    android:textSize="40sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/team_a_foul"
                    android:layout_marginBottom="16dp"
                    android:textSize="40sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <TextView
                android:id="@+id/team_a_penalty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/team_a_penalty"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="pointForTeamA"
                android:text="Add Point"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="foulForTeamA"
                android:text="Add Foul"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="penaltyForTeamA"
                android:text="Add Penalty"
                android:textAllCaps="false"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:hint="Enter Second Team Name"
                android:onClick="setTeamBName"
                android:textSize="10sp"
                android:text="@string/team_b_name_text"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/team_b_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="Points"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="Fouls"
                    android:layout_marginBottom="16dp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/team_b_score"
                    android:layout_marginBottom="16dp"
                    android:textSize="40sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/team_b_foul"
                    android:layout_marginBottom="16dp"
                    android:textSize="40sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <TextView
                android:id="@+id/team_b_penalty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/team_b_penalty"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="pointForTeamB"
                android:text="Add Point"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="foulForTeamB"
                android:text="Add Foul"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="penaltyForTeamB"
                android:text="Add Penalty"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>